update workflow dependencies installation

--- a/.github/workflows/main_djangoecom.yml
+++ b/.github/workflows/main_djangoecom.yml
@@ -26,9 +26,16 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
+
+      - name: Upgrade pip
+        run: pip install --upgrade pip
+
+      - name: Update setuptools and wheel
+        run: pip install --upgrade setuptools wheel
       
+
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install --use-pep517 -r requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
