Install numpy seperately

--- a/.github/workflows/main_djangoecom.yml
+++ b/.github/workflows/main_djangoecom.yml
@@ -32,10 +32,13 @@ jobs:
 
       - name: Update setuptools and wheel
         run: pip install --upgrade setuptools wheel
-      
 
+      - name: Install numpy seperately
+        run: pip install numpy
+      
       - name: Install dependencies
-        run: pip install --use-pep517 -r requirements.txt
+        run: pip install -r requirements.txt
+
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
