--- a/.github/workflows/main_djangoecom.yml
+++ b/.github/workflows/main_djangoecom.yml
@@ -39,6 +39,10 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
+      - name: Install coreheader
+        run: pip install django-cors-headers
+       
+
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
