--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ constantly==23.10.4
 cryptography==42.0.5
 daphne==4.1.2
 Django==4.2.11
+django-cors-headers==4.3.1
 hyperlink==21.0.0
 idna==3.7
 incremental==22.10.0
